--- a/style.css
+++ b/style.css
@@ -1,3 +1,59 @@
 header h1 {
   color: aquamarine;
 }
+
+.calc-btns {
+  background-color: aquamarine;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 
+    [col-1] 1fr
+    [col-2] 1fr
+    [col-3] 1fr
+    [col-4] 1fr;
+  grid-template-rows:
+    [row-1] 1fr
+    [row-2] 1fr
+    [row-3] 1fr
+    [row-4] 1fr
+    [row-5] 1fr;
+}
+
+.col1 {
+  grid-column-start: col-1;
+}
+
+.col2 {
+  grid-column-start: col-2;
+}
+
+.col-end3 {
+  grid-column-end: col-3;
+}
+
+.col3 {
+  grid-column-start: col-3;
+}
+
+.col4 {
+  grid-column-start: col-4;
+}
+.row1 {
+  grid-row-start: row-1;
+}
+
+.row2 {
+  grid-row-start: row-2;
+}
+
+.row3 {
+  grid-row-start: row-3;
+}
+
+.row4 {
+  grid-row-start: row-4;
+}
+
+.row5 {
+  grid-row-start: row-5;
+}
