--- a/style.css
+++ b/style.css
@@ -2,8 +2,50 @@ header h1 {
   color: aquamarine;
 }
 
+.calc-body {
+  background-color: #6FADE7;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+  max-width: 200px;
+  min-width: 100px;
+}
+
+.calc-display {
+  background-color: #A8FFC0;
+  font-family: monospace; /* add digital font */
+  margin-bottom: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  text-align: right;
+  box-shadow:
+    1px 1px 1px rgba(0, 0, 0, 0.15),
+    -1px -1px 2px rgba(225, 225, 225, 0.15),
+    inset 3px 3px 3px rgba(0, 0, 0, 0.25),
+    inset -4px -4px 2px rgba(255, 255, 255, 0.25);
+}
+
+.calc-btns button {
+  background-color: #EEEEEE;
+  border-radius: 5px;
+  border-style: none;
+  box-shadow:
+    1px 1px 1px rgba(0, 0, 0, 0.15),
+    -1px -1px 2px rgba(225, 225, 225, 0.15),
+    inset 3px 3px 3px rgba(0, 0, 0, 0.25),
+    inset -4px -4px 2px rgba(255, 255, 255, 0.25);
+}
+
+.calc-btns button:active {
+  scale: 0.98;
+}
+
+.calc-btns button:hover {
+  background-color: #A8FFC0;
+  cursor: pointer;
+}
+
 .calc-btns {
-  background-color: aquamarine;
   display: grid;
   gap: 10px;
   grid-template-columns: 
