--- a/style.css
+++ b/style.css
@@ -10,14 +10,21 @@
 
 header h1 {
   color: aquamarine;
+  text-align: center;
+}
+
+main {
+  display: flex;
+  justify-content: center;
 }
 
 .calc-body {
+  flex-basis: 180px;
   background-color: #6FADE7;
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
-  max-width: 200px;
+  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.30);
+  max-width: 180px;
   min-width: 100px;
 }
 
