--- a/style.css
+++ b/style.css
@@ -29,13 +29,15 @@ main {
 }
 
 .calc-display {
+  user-select: none;
   font-family: "Digital-7 Mono";
   font-size: 2rem;
+  height: 1.6rem;
+  text-align: right;
   background-color: #A8FFC0;
   margin-bottom: 10px;
   padding: 5px;
   border-radius: 5px;
-  text-align: right;
   box-shadow:
     1px 1px 1px rgba(0, 0, 0, 0.15),
     -1px -1px 2px rgba(225, 225, 225, 0.15),
