--- a/style.css
+++ b/style.css
@@ -19,13 +19,14 @@ main {
 }
 
 .calc-body {
-  flex-basis: 180px;
+  /* flex-basis: 180px; */
   background-color: #6FADE7;
   padding: 10px;
   border-radius: 5px;
   box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.30);
-  max-width: 180px;
-  min-width: 100px;
+  /* width: 200px; */
+  min-width: 200px;
+  /* height: 300px; */
 }
 
 .calc-display {
@@ -68,7 +69,8 @@ main {
 
 .calc-btns {
   display: grid;
-  gap: 10px;
+  gap: 5px;
+  height: 200px;
   grid-template-columns: 
     [col-1] 1fr
     [col-2] 1fr
@@ -101,6 +103,7 @@ main {
 .col4 {
   grid-column-start: col-4;
 }
+
 .row1 {
   grid-row-start: row-1;
 }
